# chess_stats

./: .gitignore  data.ipynb  pyproject.toml  stats.ipynb
games/: 2022_1.json  2022_10.json  2022_11.json  2022_12.json  2022_2.json  2022_3.json  2022_4.json  2022_5.json  2022_6.json  2022_7.json  2022_8.json  2022_9.json  2023_1.json  2023_10.json  2023_11.json  2023_2.json  2023_3.json  2023_4.json  2023_5.json  2023_6.json  2023_8.json  2023_9.json
